<resources>
    <string name="app_name">CHEF BUKHARI</string>
    <string name="continue_without_registration">Continue without registration</string>
    <string name="sign_in">Sign in</string>
    <string name="register_a_new_account">Register a new account</string>
    <string name="create_new_account">Create new Account</string>
    <string name="mobile">Mobile</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="city">City</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="retrieve_account_information">Retrieve account information</string>
    <string name="retrieve">Retrieve</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join_us_without_register">Join us without register</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="user_image">User Image</string>
    <string name="district">District</string>
    <string name="create_new_user">Create new User</string>
    <string name="new_user">New User</string>
    <string name="forget_password">Forget password ?</string>
    <string name="reset">Reset</string>
    <string name="account_reset">Account reset</string>
    <string name="extra_requests">EXTRA REQUESTS</string>
    <string name="add">Add</string>
    <string name="dashboard">Dashboard</string>
    <string name="orders">Orders</string>
    <string name="favorites">Favorites</string>
    <string name="user_terms">User Terms</string>
    <string name="change_language">Change Language</string>
    <string name="sign_out">Sign Out</string>
    <string name="favourites">Favourites</string>
    <string name="checkout">CheckOut</string>
    <string name="keep_shopping">Keep Shopping</string>
    <string name="sr">SR</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="pickup_branch">Pickup Branch</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="cart_shopping">Cart Shopping</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="use">Use</string>
    <string name="sum">Sum</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="payment_method">Payment Method</string>
    <string name="pay">Pay</string>
    <string name="google_pay">Google pay</string>
    <string name="made_credit_card">Made Credit Card</string>
    <string name="order_details">Order Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="delivery_code">Delivery Code</string>
    <string name="status">Status</string>
    <string name="user_dashboard">User Dashboard</string>
    <string name="user_data">User Data</string>
    <string name="order_no">Order No</string>
    <string name="edit_user_file">Edit User File</string>
    <string name="chef_bukhari_is_a_unique_experience_for_people_who_know_or_would_like_to_try_the_real_bukhari_foods_as_never_tried_before">Chef Bukhari is a unique experience for people who know or would like to try the real bukhari foods as never tried before.</string>
    <string name="www_chefbukhari_com">www.ChefBukhari.com</string>
    <string name="agent_dashboard">Agent Dashboard</string>
    <string name="about_us">About us</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="details">Details</string>
    <string name="delivery_method">Delivery Method</string>
    <string name="pick_up_from_restaurant">Pick up from Restaurant</string>
    <string name="client">Client</string>
    <string name="location">Location</string>
    <string name="location_map">Location Map</string>
    <string name="branch">Branch :</string>
    <string name="code">Code :</string>
    <string name="send">Send</string>
    <string name="view_order">View order</string>
    <string name="client_location">Client Location</string>
    <string name="add_to_favourite">Added to favourite</string>
    <string name="please_sign_in_first">Please sign in first</string>
    <string name="cart_empty">Cart Empty</string>
    <string name="home">Home</string>
    <string name="added_to_favourite">Added to Favourite</string>
    <string name="delivery_code_sent">Delivery Code Sent</string>
    <string name="delivery_code_did_not_sent">Delivery Code Didn\'t Sent</string>
    <string name="arrival">arrival</string>
    <string name="added_successfully">Added successfully</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
