<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.SendDeliveryCodeAgentActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rel">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:text="@string/agent_dashboard"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_back"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:layout_marginStart="50dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_back_ar"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:layout_marginStart="50dp"
            tools:ignore="PrivateResource" />
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_code"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/txt_coupon"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2.2"
            android:id="@+id/ed_coupon"
            android:layout_marginEnd="8dp"
            android:background="@drawable/stroke_gray_register_field"/>


        <Button
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_weight="0.8"
            android:background="@color/error"
            android:text="@string/send"
            android:id="@+id/btn_coupon"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_order"
            android:background="@drawable/button_solid_red"
            android:textColor="@color/white"
            android:paddingEnd="25dp"
            android:paddingStart="25dp"
            android:id="@+id/btn_viewOrder"
            android:textStyle="bold"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client"
            android:background="@drawable/button_solid_red"
            android:textColor="@color/white"
            android:paddingEnd="40dp"
            android:layout_marginStart="16dp"
            android:paddingStart="40dp"
            android:id="@+id/btn_client"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>