<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.activities.RegisterActivity">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/inside_app_logo_large"
        android:layout_marginTop="8dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:text="@string/new_user"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_back"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:layout_marginStart="50dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_back_ar"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:layout_marginStart="50dp"
            tools:ignore="PrivateResource" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@color/gray_t"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="50dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textColor="@color/black"
                android:maxLines="1"
                android:id="@+id/ed_username"
                android:layout_marginTop="2dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:background="@drawable/stroke_gray_register_field"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number"
                android:textColor="@color/gray_t"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="16dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textColor="@color/black"
                android:maxLines="1"
                android:layout_marginTop="2dp"
                android:id="@+id/ed_mobile"
                android:paddingEnd="5dp"
                android:inputType="phone"
                android:paddingStart="5dp"
                android:background="@drawable/stroke_gray_register_field"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textColor="@color/gray_t"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="16dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textColor="@color/black"
                android:maxLines="1"
                android:layout_marginTop="2dp"
                android:paddingEnd="5dp"
                android:id="@+id/ed_mail"
                android:paddingStart="5dp"
                android:background="@drawable/stroke_gray_register_field"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/gray_t"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="16dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textColor="@color/black"
                android:maxLines="1"
                android:layout_marginTop="2dp"
                android:paddingEnd="5dp"
                android:inputType="textPassword"
                android:id="@+id/ed_pass"
                android:paddingStart="5dp"
                android:background="@drawable/stroke_gray_register_field"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textColor="@color/gray_t"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/district"

                    android:textColor="@color/gray_t"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="40dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginTop="16dp">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:id="@+id/sp_city"
                    android:background="@drawable/stroke_gray_register_field"
                    android:textColor="@color/gray_t"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="20dp"/>

                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="1.2"
                    android:background="@drawable/stroke_gray_register_field"
                    android:layout_height="40dp"
                    android:id="@+id/sp_neighborhood"
                    android:textColor="@color/gray_t"
                    android:layout_marginEnd="20dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_image"
                android:textColor="@color/gray_t"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:hint="@string/add_a_photo"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:id="@+id/txt_photo"
                android:background="@drawable/stroke_gray_register_field"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/curv_button_solid_red"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:layout_marginTop="32dp"
                android:text="@string/create_new_user"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:id="@+id/btn_signUp"
                android:textStyle="bold"
                android:layout_marginBottom="32dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>