<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.fragments.ClientLocationFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/rel">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/txt_title"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:text="@string/cart_shopping"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_back"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:layout_marginStart="50dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_back_ar"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:layout_marginStart="50dp"
            tools:ignore="PrivateResource" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:id="@+id/txt_locationnnnn"
        android:layout_marginTop="50dp"
        android:text="@string/delivery_location"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/stroke_gray_register_field"
        android:layout_marginEnd="60dp"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="18sp"
        android:id="@+id/txt_location"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="60dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_cityyyy"
                android:text="@string/city"
                android:textColor="@color/gray_t"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/district"
                android:id="@+id/txt_dist"
                android:textColor="@color/gray_t"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="40dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="16dp">

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:id="@+id/sp_city"
                android:background="@drawable/stroke_gray_register_field"
                android:textColor="@color/gray_t"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="20dp"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:background="@drawable/stroke_gray_register_field"
                android:layout_height="40dp"
                android:id="@+id/sp_neighborhood"
                android:textColor="@color/gray_t"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_map"
            android:id="@+id/txt_map"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="24dp"/>

    <com.google.android.gms.maps.MapView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:id="@+id/map">

    </com.google.android.gms.maps.MapView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/curv_button_solid_red"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/checkout"
        android:id="@+id/btn_checkOut"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:layout_marginBottom="16dp"/>

    </LinearLayout>

    </ScrollView>

</LinearLayout>