<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".ui.activities.ArrivalActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="50dp"
                android:text="@string/delivery_location"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/stroke_gray_register_field"
                android:layout_marginEnd="60dp"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="18sp"
                android:id="@+id/txt_location"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:layout_marginStart="60dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textColor="@color/gray_t"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/district"

                    android:textColor="@color/gray_t"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="40dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:id="@+id/sp_city"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:background="@drawable/stroke_gray_register_field"
                    android:textColor="@color/black"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="20dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1.2"
                    android:background="@drawable/stroke_gray_register_field"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:id="@+id/sp_neighborhood"
                    android:textColor="@color/black"
                    android:layout_marginEnd="20dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_map"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="24dp"/>

            <com.google.android.gms.maps.MapView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:id="@+id/map">

            </com.google.android.gms.maps.MapView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>